--- a/bin/layout/SalesPageLayout.fxml
+++ b/bin/layout/SalesPageLayout.fxml
@@ -15,180 +15,183 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="900.0" style="-fx-background-color: #D8D8D8; -fx-border-color: #00FFFF;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SalesPage">
-   <children>
-      <HBox layoutX="-1.0" prefHeight="100.0" prefWidth="550.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
-         <children>
-            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../sellIicon.png" />
-               </image>
-               <HBox.margin>
-                  <Insets left="150.0" top="25.0" />
-               </HBox.margin>
-            </ImageView>
-            <ImageView fitHeight="60.0" fitWidth="60.0" onMouseClicked="#inventoryPage" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../reporticon.png" />
-               </image>
-               <HBox.margin>
-                  <Insets left="50.0" top="25.0" />
-               </HBox.margin>
-            </ImageView>
-            <ImageView fitHeight="70.0" fitWidth="70.0" onMouseClicked="#reportPage" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../inventory%20icon.png" />
-               </image>
-               <HBox.margin>
-                  <Insets left="50.0" top="20.0" />
-               </HBox.margin>
-            </ImageView>
-         </children>
-      </HBox>
-      <ImageView fitHeight="65.0" fitWidth="65.0" layoutX="50.0" layoutY="20.0" onMouseClicked="#homePage" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../homeicon.png" />
-         </image>
-      </ImageView>
-      <VBox layoutX="549.0" layoutY="2.0" prefHeight="331.0" prefWidth="352.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
-         <children>
-            <TableView fx:id="orderTableView" editable="true" maxWidth="328.0" prefHeight="161.0" prefWidth="328.0">
-              <columns>
-                <TableColumn fx:id="coffeeIDColumn" prefWidth="22.444398244220793" sortable="false" text="ID" />
-                <TableColumn fx:id="coffeeFlavourColumn" prefWidth="80.22228050231934" text="OrderName" />
-                  <TableColumn fx:id="coffeeSizeColumn" prefWidth="31.77771759033203" sortable="false" text="Size" />
-                  <TableColumn fx:id="coffeeMilkColumn" prefWidth="46.44439697265625" sortable="false" text="Milk" />
-                  <TableColumn fx:id="coffeeExtrasColumn" prefWidth="87.99992370605469" sortable="false" text="Extras" />
-                  <TableColumn fx:id="coffeePriceColumn" prefWidth="183.99993896484375" sortable="false" text="Price" />
-              </columns>
-            </TableView>
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding></VBox>
-      <ImageView fitHeight="97.0" fitWidth="100.0" layoutX="40.0" layoutY="116.0" onMouseClicked="#addAmericano" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../Americano.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="160.0" layoutY="115.0" onMouseClicked="#addCappuccino" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../Cappucino.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="280.0" layoutY="115.0" onMouseClicked="#addLatte" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../Caffe%20Latte.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="400.0" layoutY="115.0" onMouseClicked="#addEspresso" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../Espresso.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="40.0" layoutY="220.0" onMouseClicked="#addDoubleEspresso" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../D%20Espresso.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="160.0" layoutY="220.0" onMouseClicked="#addEspressoMacchiato" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../E%20Macchiato.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="280.0" layoutY="220.0" onMouseClicked="#addRistreto" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../Ristreto.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="400.0" layoutY="220.0" onMouseClicked="#addLatteMacchiato" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../Macchiato.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="150.0" fitWidth="100.0" layoutX="40.0" layoutY="325.0" onMouseClicked="#addCafeMocha" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../Mocha.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="160.0" layoutY="325.0" onMouseClicked="#addIrishCoffee" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../irish%20coffee.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="280.0" layoutY="325.0" onMouseClicked="#addFrappe" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../Frappe.jpeg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="400.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../Takeaway.jpeg" />
-         </image>
-      </ImageView>
-      <VBox layoutX="550.0" layoutY="331.0" prefHeight="266.0" prefWidth="350.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
-         <children>
-            <Label prefHeight="40.0" prefWidth="69.0" text="DIscount" />
-            <Label prefHeight="40.0" prefWidth="46.0" text="GST" />
-            <Label prefHeight="40.0" prefWidth="53.0" text="Total" />
-            <Label prefHeight="60.0" prefWidth="355.0" style="-fx-background-color: #00FFFF;" text="Pay" translateY="30.0">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font></Label>
-         </children>
-      </VBox>
-      <MenuButton fx:id="coffeeSize" layoutX="65.0" layoutY="446.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Size">
-        <items>
-          <MenuItem mnemonicParsing="false" onAction="#small" text="Small" />
-          <MenuItem mnemonicParsing="false" onAction="#medium" text="Medium" />
-            <MenuItem mnemonicParsing="false" onAction="#large" text="Large" />
-        </items>
-         <font>
-            <Font name="Century Gothic" size="18.0" />
-         </font>
-      </MenuButton>
-      <MenuButton fx:id="coffeeExtra" layoutX="387.0" layoutY="446.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Extras">
-        <items>
-          <MenuItem mnemonicParsing="false" onAction="#onEspressoShot" text="Espresso Shot" />
-          <MenuItem mnemonicParsing="false" onAction="#onExtraFlavour" text="Flavours" />
-            <MenuItem mnemonicParsing="false" onAction="#onWhippedCream" text="Whipped Cream" />
-        </items>
-         <font>
-            <Font size="18.0" />
-         </font>
-      </MenuButton>
-      <MenuButton fx:id="coffeeMilk" layoutX="213.0" layoutY="447.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Milk">
-        <items>
-          <MenuItem mnemonicParsing="false" onAction="#onRegular" text="Regular" />
-          <MenuItem mnemonicParsing="false" onAction="#onSkimmed" text="Skimmed" />
-            <MenuItem mnemonicParsing="false" onAction="#onSoy" text="Soy" />
-            <MenuItem mnemonicParsing="false" onAction="#onAlmond" text="Almond" />
-        </items>
-         <font>
-            <Font name="Century Gothic" size="18.0" />
-         </font>
-      </MenuButton>
-      <Button fx:id="pricePerCoffee" alignment="CENTER" contentDisplay="CENTER" layoutX="46.0" layoutY="496.0" mnemonicParsing="false" onAction="#pricePerCoffee" onMouseClicked="#pricePerCoffee" prefHeight="38.0" prefWidth="109.0" style="-fx-background-color: #FFFFFF;" text="Price" textAlignment="CENTER">
-         <font>
-            <Font name="Century Gothic" size="16.0" />
-         </font>
-         <effect>
-            <InnerShadow />
-         </effect>
-      </Button>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="350.0" layoutY="484.0" mnemonicParsing="false" onMouseClicked="#complete" prefHeight="38.0" prefWidth="109.0" style="-fx-background-color: #FFFFFF;" text="Price" textAlignment="CENTER">
-         <font>
-            <Font name="Century Gothic" size="16.0" />
-         </font>
-         <effect>
-            <InnerShadow />
-         </effect>
-      </Button>
-   </children>
-   <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </padding>
-   <opaqueInsets>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </opaqueInsets>
+<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="900.0" style="-fx-background-color: #D8D8D8; -fx-border-color: #00FFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SalesPage">
+	<children>
+		<HBox layoutX="-1.0" prefHeight="100.0" prefWidth="460.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
+			<children>
+				<ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+					<image>
+						<Image url="@../../sellIicon.png" />
+					</image>
+					<HBox.margin>
+						<Insets left="150.0" top="25.0" />
+					</HBox.margin>
+				</ImageView>
+				<ImageView fitHeight="60.0" fitWidth="60.0" onMouseClicked="#inventoryPage" pickOnBounds="true" preserveRatio="true">
+					<image>
+						<Image url="@../../reporticon.png" />
+					</image>
+					<HBox.margin>
+						<Insets left="50.0" top="25.0" />
+					</HBox.margin>
+				</ImageView>
+				<ImageView fitHeight="70.0" fitWidth="70.0" onMouseClicked="#reportPage" pickOnBounds="true" preserveRatio="true">
+					<image>
+						<Image url="@../../inventory%20icon.png" />
+					</image>
+					<HBox.margin>
+						<Insets left="50.0" top="20.0" />
+					</HBox.margin>
+				</ImageView>
+			</children>
+		</HBox>
+		<ImageView fitHeight="65.0" fitWidth="65.0" layoutX="50.0" layoutY="20.0" onMouseClicked="#homePage" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../homeicon.png" />
+			</image>
+		</ImageView>
+		<VBox layoutX="459.0" layoutY="2.0" prefHeight="331.0" prefWidth="442.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
+			<children>
+				<TableView fx:id="orderTableView" editable="true" maxWidth="428.0" prefHeight="216.0" prefWidth="428.0">
+					<columns>
+						<TableColumn fx:id="coffeeIDColumn" prefWidth="33.333375334739685" sortable="false" text="ID" />
+						<TableColumn fx:id="coffeeFlavourColumn" prefWidth="137.99994277954102" text="OrderName" />
+						<TableColumn fx:id="coffeeSizeColumn" minWidth="1.77777099609375" prefWidth="30.2222900390625" sortable="false" text="Size" />
+						<TableColumn fx:id="coffeeMilkColumn" prefWidth="63.11106872558594" sortable="false" text="Milk" />
+						<TableColumn fx:id="coffeeExtrasColumn" prefWidth="88.22222900390625" sortable="false" text="Extras" />
+						<TableColumn fx:id="coffeePriceColumn" prefWidth="104.4444580078125" sortable="false" text="Price" />
+					</columns>
+				</TableView>
+			</children>
+			<padding>
+				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+			</padding>
+		</VBox>
+		<ImageView fitHeight="97.0" fitWidth="100.0" layoutX="8.0" layoutY="115.0" onMouseClicked="#addAmericano" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../Americano.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="100.0" fitWidth="100.0" layoutX="120.0" layoutY="115.0" onMouseClicked="#addCappuccino" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../Cappucino.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="100.0" fitWidth="100.0" layoutX="230.0" layoutY="115.0" onMouseClicked="#addLatte" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../Caffe%20Latte.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="100.0" fitWidth="100.0" layoutX="340.0" layoutY="115.0" onMouseClicked="#addEspresso" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../Espresso.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="100.0" fitWidth="100.0" layoutX="8.0" layoutY="218.0" onMouseClicked="#addDoubleEspresso" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../D%20Espresso.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="100.0" fitWidth="100.0" layoutX="120.0" layoutY="220.0" onMouseClicked="#addEspressoMacchiato" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../E%20Macchiato.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="100.0" fitWidth="100.0" layoutX="230.0" layoutY="220.0" onMouseClicked="#addRistreto" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../Ristreto.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="100.0" fitWidth="100.0" layoutX="340.0" layoutY="220.0" onMouseClicked="#addLatteMacchiato" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../Macchiato.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="150.0" fitWidth="100.0" layoutX="7.0" layoutY="322.0" onMouseClicked="#addCafeMocha" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../Mocha.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="100.0" fitWidth="100.0" layoutX="120.0" layoutY="325.0" onMouseClicked="#addIrishCoffee" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../irish%20coffee.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="100.0" fitWidth="100.0" layoutX="230.0" layoutY="325.0" onMouseClicked="#addFrappe" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../Frappe.jpeg" />
+			</image>
+		</ImageView>
+		<ImageView fitHeight="100.0" fitWidth="100.0" layoutX="340.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@../../Takeaway.jpeg" />
+			</image>
+		</ImageView>
+		<VBox layoutX="456.0" layoutY="331.0" prefHeight="266.0" prefWidth="444.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #00FFFF;">
+			<children>
+				<Label prefHeight="40.0" prefWidth="69.0" text="DIscount" />
+				<Label prefHeight="40.0" prefWidth="46.0" text="GST" />
+				<Label prefHeight="40.0" prefWidth="53.0" text="Total" />
+				<Label prefHeight="60.0" prefWidth="355.0" style="-fx-background-color: #00FFFF;" text="Pay" translateY="30.0">
+					<font>
+						<Font name="System Bold" size="18.0" />
+					</font>
+				</Label>
+			</children>
+		</VBox>
+		<MenuButton fx:id="coffeeSize" layoutX="15.0" layoutY="451.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Size">
+			<items>
+				<MenuItem mnemonicParsing="false" onAction="#small" text="Small" />
+				<MenuItem mnemonicParsing="false" onAction="#medium" text="Medium" />
+				<MenuItem mnemonicParsing="false" onAction="#large" text="Large" />
+			</items>
+			<font>
+				<Font name="Century Gothic" size="18.0" />
+			</font>
+		</MenuButton>
+		<MenuButton fx:id="coffeeExtra" layoutX="313.0" layoutY="447.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Extras">
+			<items>
+				<MenuItem mnemonicParsing="false" onAction="#onEspressoShot" text="Espresso Shot" />
+				<MenuItem mnemonicParsing="false" onAction="#onExtraFlavour" text="Flavours" />
+				<MenuItem mnemonicParsing="false" onAction="#onWhippedCream" text="Whipped Cream" />
+				<MenuItem mnemonicParsing="false" onAction="#none" text="none" />
+			</items>
+			<font>
+				<Font size="18.0" />
+			</font>
+		</MenuButton>
+		<MenuButton fx:id="coffeeMilk" layoutX="156.0" layoutY="450.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Milk">
+			<items>
+				<MenuItem mnemonicParsing="false" onAction="#onRegular" text="Regular" />
+				<MenuItem mnemonicParsing="false" onAction="#onSkimmed" text="Skimmed" />
+				<MenuItem mnemonicParsing="false" onAction="#onSoy" text="Soy" />
+				<MenuItem mnemonicParsing="false" onAction="#onAlmond" text="Almond" />
+			</items>
+			<font>
+				<Font name="Century Gothic" size="18.0" />
+			</font>
+		</MenuButton>
+		<Button fx:id="pricePerCoffee" alignment="CENTER" contentDisplay="CENTER" layoutX="69.0" layoutY="512.0" mnemonicParsing="false" onAction="#pricePerCoffee" onMouseClicked="#pricePerCoffee" prefHeight="38.0" prefWidth="109.0" style="-fx-background-color: #FFFFFF;" text="Price" textAlignment="CENTER">
+			<font>
+				<Font name="Century Gothic" size="16.0" />
+			</font>
+			<effect>
+				<InnerShadow />
+			</effect>
+		</Button>
+		<Button alignment="CENTER" contentDisplay="CENTER" layoutX="246.0" layoutY="513.0" mnemonicParsing="false" onMouseClicked="#complete" prefHeight="38.0" prefWidth="109.0" style="-fx-background-color: #FFFFFF;" text="Total Price" textAlignment="CENTER">
+			<font>
+				<Font name="Century Gothic" size="16.0" />
+			</font>
+			<effect>
+				<InnerShadow />
+			</effect>
+		</Button>
+	</children>
+	<padding>
+		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+	</padding>
+	<opaqueInsets>
+		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+	</opaqueInsets>
 </Pane>
